More CSS cleanup. Fixed alignment of gallery heading.

--- a/jsth/static/css/base.css
+++ b/jsth/static/css/base.css
@@ -22,7 +22,7 @@ html, body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin-top: 4em;
+  margin-top: 3em;
   color: #CF6766;
 }
 
