--- a/jsth/static/css/gallery.css
+++ b/jsth/static/css/gallery.css
@@ -1,12 +1,11 @@
 .main-content {
-  flex-direction: unset;
+  flex-direction: row;
 }
 
 .gallery-heading-wrapper {
   display: flex;
-  align-content: center;
-  position: relative;
-  left: 0;
+  flex-direction: column;
+  justify-content: center;
   width: 35em;
   height: 25em;
   padding-right: 2em;
@@ -15,7 +14,7 @@
   text-align: right;
 }
 
-.gallery-wrapper {
+.gallery-container {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto;
