--- a/jsth/static/css/header.css
+++ b/jsth/static/css/header.css
@@ -4,7 +4,7 @@ header {
   justify-content: space-between;
   position: fixed;
   overflow: hidden;
-  height: auto;
+  height: 3em;
   width: 100%;
   min-width: 850px;
   top: 0;
@@ -25,9 +25,6 @@ header {
 }
 
 nav {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   height: auto;
   padding-right: 5%;
   color: #CF6766;
@@ -40,14 +37,15 @@ nav {
 .nav-menu-item {
   float: right;
   margin-left: 1em;
+  padding-bottom: 0.5em;
 }
 
 .nav-menu-item:hover {
-  border-bottom: 0.5em solid #CF6766;
+  border-bottom: 0.3em solid #CF6766;
 }
 
 .nav-menu-item.active {
-  border-bottom: 0.5em solid white;
+  border-bottom: 0.3em solid white;
 }
 
 .nav-menu-item .link {
